--- a/index1.html
+++ b/index1.html
@@ -19,18 +19,18 @@
     <header>
     <div class="container">
         <div class="row">
-             <div class="col-md-4">
+             <div class="col-sm-4 col-md-5 col-lg-4">
                  <div class="header-group__logo">
                     <h1>BEERCLUB</h1>
                     <p>Головний пивний блог країни</p>
                 </div>
              </div>
-             <div class="col-md-7 offset-md-1 col-lg-6 offset-lg-2">
+             <div class="col-sm-8 col-md-7 col-lg-6 offset-lg-2">
                 <div class="header-group__nav-menu">
                 <ul class="main-ul-menu">
                    <li class="nav-menu__active"><a href="">Головна</a></li>
-                   <li class="main-li-menu"><a href="">Категорії</a>
-                            <ul class='submenu'>
+                   <li class="main-li-menu"><a href="#">Категорії</a>
+                            <ul class="submenu">
                                 <li><a href="">Пиво</a></li>
                                 <li><a href="">Подорожі</a></li>
                                 <li><a href="">Книги</a></li>
@@ -87,7 +87,7 @@
     <section class="block-advertising">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-12">
                     <div class="advertising-group">
                         <div class="advertising-img"></div>
                         <div class="advertising-info">
@@ -107,10 +107,11 @@
         </div>
     </section>
 
+
      <section class="block-main-slider">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-12">
                    <div class="slider-for">
                         <div><img src="img/slide-1.png" alt="1"></div>
                         <div><img src="img/slide-2.jpg" alt="2"></div>
@@ -132,7 +133,6 @@
         </div>
     </section>
 
-    
     <section class="contact-form">
         <div class="container">
             <div class="row">
@@ -176,21 +176,21 @@
         <hr>
          <div class="container">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-3 col-sm-2">
                     <div class="footer-link">
                         <p> design by Torolchuk <br>
                         prod by Aleks Mytiuk <br>
                         2017 year</p>
                     </div>
                </div>
-                 <div class="col-sm-4 offset-sm-1 col-lg-4 offset-lg-2">
+                 <div class="col-4 col-sm-4 offset-sm-1 col-lg-4 offset-lg-2">
                      <div class="footer-logo-outside">
                          <div class="footer-logo">
                          <h2>BEERCLUB</h2>
                          <p>Головний пивний блог країни</p>
                      </div></div>
                  </div>
-                 <div class="col-sm-2 offset-sm-2 col-lg-2 offset-lg-2">
+                 <div class="col-2 col-sm-2 offset-sm-1 col-lg-2 offset-lg-2">
                     <div class="footer-link">
                         <ul>
                             <li><a href="">facebook</a></li>
@@ -202,6 +202,7 @@
             </div>
         </div>
     </footer> 
+
 </div>
 
     <div class="modal-window-form-submit" id="modal">
